--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -19,7 +19,13 @@ dependencies = [
 requires-python = ">= 3.11"
 
 [project.urls]
-Repository = "https://github.com/AllTrue-ai/ai-security-customer-plane"
+Repository = "https://github.com/AllTrue-ai/ai-security-customer-sdk"
+
+[project.optional-dependencies]
+testing = [
+    "pytest_httpx~=0.35.0",
+    "pytest-asyncio~=0.25.3",
+]
 
 [tool.pdm.version]
 source = "file"
