--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -48,7 +48,7 @@ jobs:
           python3.11 -m pip install --upgrade pip
           python3.11 -m venv venv
           source venv/bin/activate
-          pip install -e.[testing]
+          pip install -e.[full]
       - name: Run pre-commit hooks
         run: |
           source venv/bin/activate
