--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -23,6 +23,7 @@ Repository = "https://github.com/AllTrue-ai/ai-security-customer-sdk"
 
 [project.optional-dependencies]
 testing = [
+    "pytest~=8.3.5",
     "pytest_httpx~=0.35.0",
     "pytest-asyncio~=0.25.3",
     "nest-asyncio~=1.6.0",
