--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,23 +3,26 @@ requires = ["pdm-backend"]
 build-backend = "pdm.backend"
 
 [project]
-name = "alltrue-customer-sdk"
+name = "alltrue-llm-observability"
 readme = "README.md"
 dynamic = ["version"]
 authors = [
     {name = "AllTrue.ai INC", email = "ury@alltrue.ai"}
 ]
-description = "Client SDK for AllTrue.ai API"
-dependencies = [
-    "openai~=1.63.0",
-    "wrapt~=1.17.2",
-]
+description = "LLM Observaility SDK for AllTrue.ai API"
 requires-python = ">= 3.11"
 
 [project.urls]
-Repository = "https://github.com/AllTrue-ai/alltrue-customer-sdk"
+Repository = "https://github.com/AllTrue-ai/alltrue-llm-observability"
 
 [project.optional-dependencies]
+observers = [
+    "wrapt~=1.17.2",
+]
+openai-observers = [
+    "alltrue-llm-observability[observers]",
+    "openai~=1.63.0",
+]
 testing = [
     "fastapi~=0.111.1",
     "mitmproxy~=11.0.2",
@@ -29,9 +32,10 @@ dev = [
     "pre-commit",
 ]
 full = [
-    "alltrue-customer-core[testing] @ file:///${PROJECT_ROOT}/core",
-    "alltrue-customer-sdk[testing]",
-    "alltrue-customer-sdk[dev]",
+    "alltrue-llm-observability-core[testing] @ file:///${PROJECT_ROOT}/core",
+    "alltrue-llm-observability[openai-observers]",
+    "alltrue-llm-observability[testing]",
+    "alltrue-llm-observability[dev]",
 ]
 
 [tool.pdm.version]
