--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dynamic = ["version"]
 authors = [
     {name = "AllTrue.ai INC", email = "ury@alltrue.ai"}
 ]
-description = "LLM Observaility SDK for AllTrue.ai API"
+description = "LLM Observability SDK for AllTrue.ai API"
 requires-python = ">= 3.11"
 
 [project.urls]
