--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "logfunc~=2.9.1",
     "pydantic>=2.6.4",
     "python-dotenv~=1.0.1",
+    "async-batcher~=0.2.2",
 ]
 requires-python = ">= 3.11"
 
