--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ authors = [
 ]
 description = "LLM Observability SDK for AllTrue.ai API"
 requires-python = ">= 3.11"
+license = {text = "Apache-2.0"}
+
 
 [project.urls]
 Repository = "https://github.com/AllTrue-ai/alltrue-llm-observability"
