--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,17 @@ authors = [
     {name = "AllTrue.ai INC", email = "ury@alltrue.ai"}
 ]
 description = "LLM Observability SDK for AllTrue.ai API"
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+]
 requires-python = ">= 3.11"
 license = {text = "Apache-2.0"}
-
 
 [project.urls]
 Repository = "https://github.com/AllTrue-ai/alltrue-llm-observability"
@@ -28,6 +36,7 @@ openai-observers = [
 testing = [
     "fastapi~=0.111.1",
     "mitmproxy~=11.0.2",
+    "pytest-dependency~=0.6.0",
 ]
 dev = [
     "build",
