--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ path = "src/version.py"
 [tool.pdm.build]
 includes = ["src/alltrue"]
 custom-hook = "src/build.py"
+excludes = ["**/tests/*"]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
