Renamed to alltrue-guardrails

--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -3,12 +3,12 @@ requires = ["pdm-backend"]
 build-backend = "pdm.backend"
 
 [project]
-name = "alltrue-llm-observability-core"
+name = "alltrue-guardrails-core"
 dynamic = ["version"]
 authors = [
     {name = "AllTrue.ai INC", email = "ury@alltrue.ai"}
 ]
-description = "LLM Observability Core Library for AllTrue.ai API"
+description = "Alltrue Guardrails Core Library"
 dependencies = [
     "hishel~=0.1.1",
     "httpx~=0.28.0",
@@ -39,7 +39,7 @@ source = "file"
 path = "../src/version.py"
 
 [tool.pdm.build]
-includes = ["src/alltrue"]
+includes = ["src/alltrue_guardrails", "src/py.typed"]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
