--- a/.github/workflows/release-assets.yml
+++ b/.github/workflows/release-assets.yml
@@ -41,4 +41,4 @@ jobs:
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: dist/alltrue_llm_observability-*
+          files: dist/*
