--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -29,6 +29,10 @@ testing = [
     "pytest-asyncio~=0.25.3",
     "nest-asyncio~=1.6.0",
 ]
+logfire-support = [
+    "logfire[httpx]>=2.11.1",
+    "opentelemetry-instrumentation-httpx>=0.48b0",
+]
 
 [tool.pdm.version]
 source = "file"
