--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pydantic>=2.6.4",
     "python-dotenv~=1.0.1",
     "async-batcher~=0.2.2",
+    "logfunc>=2.9.1",
 ]
 requires-python = ">= 3.11"
 
