--- a/.github/workflows/auto-prerelease.yml
+++ b/.github/workflows/auto-prerelease.yml
@@ -21,8 +21,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Setup
+        run: |
+          python3.11 -m venv venv
+          source venv/bin/activate
+          pip install python-semantic-release
       - name: Release
-        uses: python-semantic-release/python-semantic-release@v9.21.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          prerelease: true
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        run: |
+          source venv/bin/activate
+          semantic-release version --prerelease --push
+          semantic-release publish
