--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,9 @@ follow_imports_for_stubs = true
 [tool.semantic_release]
 version_variables = ["src/version.py:__version__"]
 
+[tool.semantic_release.remote]
+token = { env = "GITHUB_TOKEN" }
+
 [tool.semantic_release.branches.main]
 match = "main"
 prerelease = false
