--- a/.github/workflows/auto-prerelease.yml
+++ b/.github/workflows/auto-prerelease.yml
@@ -41,5 +41,5 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           source venv/bin/activate
-          semantic-release version --prerelease --push
+          semantic-release version --prerelease --push --no-changelog
           semantic-release publish
