feat: use github hosted runners

--- a/.github/workflows/pull-request-labels.yml
+++ b/.github/workflows/pull-request-labels.yml
@@ -9,7 +9,8 @@ jobs:
       issues: write
       pull-requests: write
     steps:
-      - uses: mheap/github-action-required-labels@v5
+      - name: Validate
+        uses: mheap/github-action-required-labels@v5
         with:
           mode: exactly
           count: 1
