--- a/.github/workflows/release-assets.yml
+++ b/.github/workflows/release-assets.yml
@@ -8,7 +8,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: false
 jobs:
-  aws-non-concurrent-build-job:
+  build-release-assets:
     timeout-minutes: 35
     runs-on: ubuntu-latest
     permissions:
@@ -23,7 +23,7 @@ jobs:
         run: |
           pip install -e.[full]
           pre-commit run --all-files
-          pytest -m "not skip_on_aws" --maxfail=5 --durations=10
+          pytest -m "not skip_on_remote" --maxfail=5 --durations=10
           python -m build
       - name: Upload
         uses: softprops/action-gh-release@v2
