--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
         args:
          - "--fix"
          - "--config"
-         - "lint.per-file-ignores = {'**/tests/*.py' = ['E402']}"
+         - "lint.per-file-ignores = {'**/tests/**/conftest.py' = ['E402']}"
       - id: ruff-format
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: 'v1.9.0'
