--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,32 +1,27 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
-    -   id: requirements-txt-fixer
-    -   id: pretty-format-json
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
+      - id: requirements-txt-fixer
+      - id: pretty-format-json
         args:
-            - "--autofix"
-            - "--indent=2"
-            - "--no-sort-keys"
-        exclude_types: [jupyter]
--   repo: https://github.com/psf/black
-    rev: 22.10.0
+          - "--autofix"
+          - "--indent=2"
+          - "--no-sort-keys"
+        exclude_types: [ jupyter ]
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.11.2
     hooks:
-    -   id: black
--   repo: https://github.com/PyCQA/autoflake
-    rev: v2.2.1
-    hooks:
-    -   id: autoflake
-        args: [--remove-all-unused-imports, --in-place]
--   repo: https://github.com/pre-commit/mirrors-mypy
+      - id: ruff
+        args:
+         - "--fix"
+         - "--config"
+         - "lint.per-file-ignores = {'**/tests/**/conftest.py' = ['E402']}"
+      - id: ruff-format
+  - repo: https://github.com/pre-commit/mirrors-mypy
     rev: 'v1.9.0'
     hooks:
-    -   id: mypy
-        additional_dependencies: [types-requests<2.31.0.7]
--   repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-    -   id: isort
-        args: ["--profile=black"]
+      - id: mypy
+        additional_dependencies: [ types-requests<2.31.0.7 ]
